[project]
name = "card2card-clicker"
version = "0.1.0"
description = ""
authors = [
    {name = "v.kondratov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "boto3 (>=1.40.75,<2.0.0)",
    "warrant (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
